   * Thud now handles command history like most modern clients, allowing you to move forward and backward through command history using Ctrl-N and Ctrl-P. The shortcut for 'Update Tactical Map Now' has been changed to Ctrl-Shift-N.

  Bug Fixes:
   * ANSI emulation has been improved.
   * Some bugs in command history handling have been fixed.


1.4 February 20, 2007
  New Features:
   * MUX-format map files can now be loaded via File -> Load Map.
   * Weather information is retrieved and displayed on the bottom of the tactical window.
   * A LOS overlay has been added. Under 'Map', select 'Show LOS Info' and hexes not in your current LOS will have a cyan/blue overlay added to them.
   * Preferences data has been moved to the Java Preferences API, meaning that thudprefs.prf is ancient history and that preferences will no longer get clobbered between versions now.
   * Thud now has an icon!
   * Keybindings have been implemented, mirroring XpertMUD's keys for users' convenience. The number pad is bound to headings, F1-F3 fires tics, shift-F1-F3 lists tics, ctrl-number keys sights weapons, alt-number keys fires weapons, ctrl-numpad targets body parts, alt-numpad-7/8/9 rotates torso.
   * Connection shortcuts (formerly ctrl-#) have been moved to ctrl-shift-# to allow keybindings to function. They no longer work while you're already connected somewhere else. The 'Update' menu has been removed, with 'Update Tactical Map Now' moved to the HUD menu.
   * When connected to a MUX, its address is displayed in the Thud title bar.

  Bug Fixes:
   * Cliff detection now functions properly between water and land hexes.
   * Fixed a minor issue with the heat scale for turreted units.

1.3.1 January 22, 2007
  New Features:
   * Heat scale added to the Status window with output identical to MUX-side 'status h'.

  Bug Fixes:
   * Battlesuits/infantry show up as a little icon of four bipeds, instead of just using the normal biped icon.